tests/ui/rfcs/rfc-2632-const-trait-impl/specializing-constness-2.stderr
error[E0119]: conflicting implementations of trait `A`
  --> $DIR/specializing-constness-2.rs:20:1
   |
LL | impl<T: Default> A for T {
   | ------------------------ first implementation here
...
LL | impl<T: Default + ~const Sup> const A for T {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
